Fri Jul 23 19:06:54 1999  Masatoshi Tsuchiya  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* install.el.in: Following the change of dictionary naming rule.

	* contrib/gene.perl (sdic_to_compat): Some fixes.

1999-07-23  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* lisp/sdic.el: Apply Tsuchiya's patch [sdic:00295] and Modify it 
	little a bit.

	* configure.in: Support multiple dictionaries.

	* Makefile.am:  Add entries for edict's family.
	  4jwords, compdic,enamdict

	* lisp/elisp-comp: Modify one line.
	  (load "sdic.el.in")  -> (load "sdic.el")

Fri Jul 23 17:04:18 1999  Hideyuki Shirai <shirai@rdmg.mgcs.mei.co.jp>

	* contrib/{edict.perl,eijirou.perl,gene.perl,jgene.perl}:
	  Add code for Windows.

	* install.el.in: Some bug fixes and update code to decide
	  `make-sdic-lisp-directory' for Mule-for-Windows.

1999-07-22  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* configure.in: Change default DICTDIR.

	* lisp/sdic.el: Replace %{EIWA,WAEI}_DICTIONARY_PATH% with
	  %{EIWA,WAEI}_DICT_PATH% ; notation changed.
	
1999-07-21  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* configure.in, Makefile.am: Add a feature to detect `WAEIJIROU'
	  directory at configure time and process it make time.

	* INSTALL: Update documents of install procedure for `WAEIJIROU'.

Wed Jul 21 21:23:31 1999  Masatoshi Tsuchiya  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/sdic.el.in: Update code for queries in upper case.

	* contrib/eijirou.perl: Update code for `WAEIJIROU'. 

1999-07-21  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* configure.in, Makefile.am: Add a feature to detect `EIJIROU'
	  directory at configure time and process it make time.

	* INSTALL: Update documents of install procedure for `EIJIROU'.

	* Makefile.am, configure.in: Support jedict.dic

Wed Jul 21 12:49:19 1999  Masaru Tawa  <tawa@ac.mbn.or.jp>

	* contrib/eijirou.perl: Fix for `WAEIJIROU'.

Wed Jul 21 12:49:19 1999  Masatoshi Tsuchiya  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
