@@ -70,46 +70,61 @@ waeijirou.dic: contrib/eijirou.perl
 waeijirou.sdic: contrib/eijirou.perl
 	@NKF@ -S -e @WAEIJIROU_DIR@/*.txt | @PERL@ contrib/eijirou.perl --waei > $@
 
-eedict.sdic: edict contrib/edict.perl
-	@PERL@ contrib/edict.perl --reverse edict > $@
-
 jedict.sdic: edict contrib/edict.perl
 	@PERL@ contrib/edict.perl edict > $@
-
-e4jwords.sdic: 4jwords contrib/edict.perl
-	@PERL@ contrib/edict.perl --reverse 4jwords > $@
 
 j4jwords.sdic: 4jwords contrib/edict.perl
 	@PERL@ contrib/edict.perl 4jwords > $@
 
-ecompdic.sdic: compdic contrib/edict.perl
-	@PERL@ contrib/edict.perl --reverse compdic > $@
-
 jcompdic.sdic: compdic contrib/edict.perl
 	@PERL@ contrib/edict.perl compdic > $@
-
-eenamdict.sdic: enamdict contrib/edict.perl
-	@PERL@ contrib/edict.perl --reverse enamdict > $@
 
 jenamdict.sdic: enamdict contrib/edict.perl
 	@PERL@ contrib/edict.perl enamdict > $@
 
+eedict.sdic: edict contrib/edict.perl
+	@PERL@ contrib/edict.perl --reverse edict > $@
 
-edict.dic: edict
+e4jwords.sdic: 4jwords contrib/edict.perl
+	@PERL@ contrib/edict.perl --reverse 4jwords > $@
+
+ecompdic.sdic: compdic contrib/edict.perl
+	@PERL@ contrib/edict.perl --reverse compdic > $@
+
+eenamdict.sdic: enamdict contrib/edict.perl
+	@PERL@ contrib/edict.perl --reverse enamdict > $@
+
+jedict.dic: edict
 	@NKF@ -deZ2 edict | \
 	@PERL@ -pe 's!\s+/!\t!;s!/!, !g;s!, $$!!' | @SORT@ -f > $@
 
-4jwords.dic: 4jword
+j4jwords.dic: 4jwords
 	@NKF@ -deZ2 4jwords | \
 	@PERL@ -pe 's!\s+/!\t!;s!/!, !g;s!, $$!!' | @SORT@ -f > $@
 
-compdic.dic: compdic
+jcompdic.dic: compdic
 	@NKF@ -deZ2 compdic | \
 	@PERL@ -pe 's!\s+/!\t!;s!/!, !g;s!, $$!!' | @SORT@ -f > $@
 
-enamdict.dic: enamdict
+jenamdict.dic: enamdict
 	@NKF@ -deZ2 enamdict | \
 	@PERL@ -pe 's!\s+/!\t!;s!/!, !g;s!, $$!!' | @SORT@ -f > $@
+
+eedict.dic: edict
+	@PERL@ contrib/edict.perl --reverse edict | \
+	@PERL@ contrib/gene.perl --sdic-to-compat > $@
+
+e4jwords.dic: 4jwords
+	@PERL@ contrib/edict.perl --reverse 4jwords | \
+	@PERL@ contrib/gene.perl --sdic-to-compat > $@
+
+ecompdic.dic: compdic
+	@PERL@ contrib/edict.perl --reverse compdic | \
+	@PERL@ contrib/gene.perl --sdic-to-compat > $@
+
+eenamdict.dic: enamdict
+	@PERL@ contrib/edict.perl --reverse enamdict | \
+	@PERL@ contrib/gene.perl --sdic-to-compat > $@
 
 edict:
 	test -f $@.gz -o -f $@.bz2
